styles/styles.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;400;600;700&display=swap");
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  list-style-type: none;
  text-decoration: none;
  font-family: "Josefin Sans", sans-serif;
  color: white;
  scroll-behavior: smooth;
}

body,
html {
  width: 100%;
  height: 100%;
}

.cursor {
  position: absolute;
  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7), 1px 2px 4px 0px rgba(0, 255, 255, 0.7), 2px 4px 8px 0px rgba(0, 255, 255, 0.7), 2px 4px 16px 0px rgba(0, 255, 255, 0.7);
          box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7), 1px 2px 4px 0px rgba(0, 255, 255, 0.7), 2px 4px 8px 0px rgba(0, 255, 255, 0.7), 2px 4px 16px 0px rgba(0, 255, 255, 0.7);
  height: 6px;
  width: 6px;
  border-radius: 100px;
  z-index: 2000;
}

.mobileMenu {
  display: none;
  position: absolute;
  width: 100vw;
  height: 100vh;
  background-color: #1E1E1E;
  top: 0;
  left: 0;
  padding: 1.5rem;
  z-index: 200;
}

.mobileMenu .menuCloseBtn {
  position: absolute;
  border: none;
  background-color: #1E1E1E;
  right: 1.5rem;
}

.mobileMenu ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  border: 1px white solid;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 3rem;
  padding: 14.4rem 0;
}

.mobileMenu ul li a {
  font-size: 2rem;
}

body {
  background-color: #0D0D0D;
}

body .container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

body .container .homepage {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding: 1.5rem;
  width: 100%;
  height: 100vh;
}

body .container .homepage .topBar {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

body .container .homepage .topBar .desktopNav {
  display: none;
}

body .container .homepage .topBar .mobileNav {
  margin-left: auto;
}

body .container .homepage .topBar .mobileNav .menuBtn {
  background-color: #0D0D0D;
  border: none;
}

body .container .homepage .nameContainer {
  margin: auto;
  padding: 0 1rem;
}

body .container .homepage .nameContainer .name {
  line-height: 5rem;
  font-weight: 200;
  font-size: 3rem;
}

body .container .homepage .nameContainer .onlineName {
  font-size: 1.9rem;
  margin-top: 2rem;
  font-weight: 200;
}

body .container .homepage .nameContainer .occupCont {
  margin-top: 6rem;
  margin-left: 1rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: relative;
}

body .container .homepage .nameContainer .occupCont::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: white;
  inset: 0;
  left: -10px;
  -webkit-transform: scaleX(0.005);
          transform: scaleX(0.005);
  -webkit-transform-origin: left;
          transform-origin: left;
  text-align: center;
  z-index: 10;
  -webkit-transition: -webkit-transform 1s ease-in-out;
  transition: -webkit-transform 1s ease-in-out;
  transition: transform 1s ease-in-out;
  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
}

body .container .homepage .nameContainer .occupCont .occ {
  font-size: 1.5rem;
  z-index: 20;
  position: relative;
  -webkit-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
  font-weight: 200;
}

body .container .homepage .nameContainer .occupCont:hover::after {
  -webkit-transform: scaleX(1.1);
          transform: scaleX(1.1);
}

body .container .homepage .nameContainer .occupCont:hover .occ {
  color: #0D0D0D;
}

body .container .about {
  padding: 1.5rem;
  height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 3rem;
}

body .container .about .aboutCont {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 1.5rem;
}

body .container .about .aboutCont .aboutHead {
  font-weight: 400;
  font-size: 2.81rem;
  line-height: 45px;
}

body .container .about .aboutCont .aboutPara {
  font-weight: 200;
  font-size: 1.43rem;
  line-height: 30px;
}

body .container .about .aboutCont .flower {
  display: none;
}

body .container .about .divider {
  display: none;
}

body .container .about .skillsCont {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 1.5rem;
}

body .container .about .skillsCont .skillHead {
  font-weight: 400;
  font-size: 2.81rem;
  line-height: 45px;
}

body .container .about .skillsCont .skills {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[2];
      grid-template-columns: repeat(2, 1fr);
  gap: 1.5rem;
}

body .container .about .skillsCont .skills .skill {
  font-weight: 300;
  font-size: 1rem;
  line-height: 30px;
}

body .container .experience {
  height: 100vh;
  padding: 1.5rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

body .container .experience .experienceHead {
  font-weight: 400;
  font-size: 2.81rem;
  line-height: 45px;
}
/* ... */

